Bug 1694575 - Don't include mozalloc.h from the iosfwd wrapper. r=andi

Differential Revision: https://phabricator.services.mozilla.com/D106392