config/gcc-stl-wrapper.template.h
@@ -27,7 +27,11 @@
 //  # define _GLIBCXX_DEBUG 1
 #endif
 
-// Don't include mozalloc for cstdlib. See bug 1245076.
+// Don't include mozalloc.h for cstdlib, type_traits, limits and iosfwd.
+// See bug 1245076 (cstdlib), bug 1594027 (type_traits, limits) and
+// bug 1694575 (iosfwd).
+// Please be careful when adding more exceptions, especially regarding
+// the header not directly or indirectly including <new>.
 #ifndef moz_dont_include_mozalloc_for_cstdlib
 #  define moz_dont_include_mozalloc_for_cstdlib
 #endif
@@ -38,6 +42,10 @@
 
 #ifndef moz_dont_include_mozalloc_for_limits
 #  define moz_dont_include_mozalloc_for_limits
+#endif
+
+#ifndef moz_dont_include_mozalloc_for_iosfwd
+#  define moz_dont_include_mozalloc_for_iosfwd
 #endif
 
 // Include mozalloc after the STL header and all other headers it includes
